# poptorchlab

./: .gitignore  README.md  setup.cfg  setup.py
examples/mnist/: configs.yml  mnist.py
poptorchlab/: __init__.py  argparse.py  ipu_settings.py  logger.py
poptorchlab/poptorchlab/: argparse.py  ipu_settings.py  layers.py  optim.py  utils.py
src/poptorchlab/: model_manipulator.py
