[metadata]
name = poptorchlab
version = 0.0.1
author = Jiwoong Choi
author_email = jiwoongc@graphcore.com
description = PopTorchLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jiwoong-choi/poptorchlab
project_urls =
    Bug Tracker = https://github.com/jiwoong-choi/poptorchlab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = poptorchlab
packages = find:
python_requires = >=3.6

[options.packages.find]
where = poptorchlab
